--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,14 @@
             "core\\":"core/"
         }
     },
-    
+    "autoload-dev": {
+        "psr-4": {
+            "tests\\":"tests"
+        }
+    },
+    "require": {
+        "php":">=8.1"
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.2"
     }
